--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 name: NodeRunner Demo
 
 on:
- # schedule:
-  #  - cron: "* * * * *"
+  schedule:
+    - cron: "20 12 1 12 *"
 jobs:
   hello:
     runs-on: ubuntu-latest
